Add Resend email environment variables

--- a/.env
+++ b/.env
@@ -8,6 +8,10 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=1
 SMTP_FAMILY=4
+EMAIL_PROVIDER=resend
+RESEND_API_KEY=
+RESEND_FROM=onboarding@resend.dev
+RESEND_API_URL=https://api.resend.com/emails
 FRONTEND_VERIFY_URL=http://127.0.0.1:5500/streak-frontend/verify-email.html
 VERIFICATION_TOKEN_TTL_HOURS=24
 
