--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ SMTP_PORT=465
 SMTP_SECURE=1
 SMTP_FAMILY=4
 EMAIL_PROVIDER=resend
-RESEND_API_KEY=
+RESEND_API_KEY=re_9qWWhz2y_GNAbLierAWSpFkxqGz9Bi2uw
 RESEND_FROM=onboarding@resend.dev
 RESEND_API_URL=https://api.resend.com/emails
 FRONTEND_VERIFY_URL=http://127.0.0.1:5500/streak-frontend/verify-email.html
