Disable OTP verification by default and update register flow

--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ FRONTEND_RESET_URL=http://127.0.0.1:5500/streak-frontend/reset-password.html
 RESET_PASSWORD_TOKEN_TTL_MINUTES=30
 
 EMAIL_OTP_TTL_MINUTES=10
+EMAIL_VERIFICATION_REQUIRED=0
